fixed totalprice + cart

--- a/src/components/empty/empty.scss
+++ b/src/components/empty/empty.scss
@@ -1,7 +1,7 @@
 .cart-empty {
-	padding-top: 233px;
+	padding-top: 160px;
 	padding-bottom: 140px;
-	
+
 
 	&__content {
 		display: flex;
@@ -10,7 +10,7 @@
 		justify-content: center;
 
 		&-title {
-		padding-top: 31px;
+			padding-top: 31px;
 
 			padding-bottom: 11px;
 			font-family: var(--font-family);
@@ -19,31 +19,32 @@
 			text-align: center;
 			color: #000;
 		}
-	
+
 		&-desc {
 			font-family: var(--font-family);
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 150%;
-	text-align: center;
-	color: #000;
-	opacity: 0.4;
+			font-weight: 400;
+			font-size: 16px;
+			line-height: 150%;
+			text-align: center;
+			color: #000;
+			opacity: 0.4;
 		}
 	}
 
-	
+
 
 	&-btn {
 		margin-top: 40px;
 		font-family: var(--font-family);
-font-weight: 600;
-font-size: 16px;
-text-align: center;
-color: #fff;
+		font-weight: 600;
+		font-size: 16px;
+		text-align: center;
+		color: #fff;
 
-border-radius: 18px;
-width: 245px;
-padding: 20px 0;
-	
-background: #9dd458;}
+		border-radius: 18px;
+		width: 245px;
+		padding: 20px 0;
+
+		background: #9dd458;
+	}
 }
