added page Bookmarks

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -28,3 +28,13 @@ body {
 	box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.04);
 	background: #fff;
 }
+
+.sectMain {
+	border-radius:  0 0 20px 20px;
+
+}
+
+.wrapper {
+	margin-top: 60px;
+	margin-bottom: 60px;
+}
