--- a/src/components/sneakers/sneakers.scss
+++ b/src/components/sneakers/sneakers.scss
@@ -48,7 +48,7 @@
 
 
 
-	ul {
+	&-content {
 		padding-top: 40px;
 		padding-bottom: 40px;
 		display: grid;
@@ -57,6 +57,7 @@
 	}
 
 	&-card {
+		position: relative;
 		padding: 30px;
 		padding-top: 0;
 		border: 1px solid #cacaca;
@@ -96,6 +97,26 @@
 			// gap: 40px;
 			justify-content: space-between;
 			align-items: center;
+
+			&-bookmarks {
+				position: absolute;
+				top: 30px;
+				left: 30px;
+
+				border: 1px solid #cacaca;
+				border-radius: 20px;
+				width: 50px;
+				height: 50px;
+				background: #fff;
+
+				cursor: pointer;
+
+				svg {
+					width: 25px;
+					height: 25px;
+					// fill: #FF8585;
+				}
+			}
 
 			&-btn {
 				border: 1px solid #cacaca;
