--- a/src/components/empty/empty.scss
+++ b/src/components/empty/empty.scss
@@ -1,8 +1,8 @@
 .empty {
 	border-radius:  0 0 20px 20px;
 
-	padding-top: 160px;
-	padding-bottom: 140px;
+	// padding-top: 160px;
+	// padding-bottom: 140px;
 
 
 	&__content {
@@ -10,6 +10,13 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
+		height: 100vh;
+		max-height: 680px;
+	
+		img {
+			width: 160px;
+			height: 160px;
+		}
 
 		&-title {
 			padding-top: 31px;
