fixed styles + hover effects

--- a/src/components/sneakers/sneakers.scss
+++ b/src/components/sneakers/sneakers.scss
@@ -103,22 +103,71 @@
 			align-items: center;
 
 			&-bookmarks {
-				position: absolute;
-				top: 30px;
-				left: 30px;
+				&-true {
+					position: absolute;
+					top: 30px;
+					left: 30px;
 
-				border: 1px solid #cacaca;
-				border-radius: 20px;
-				width: 50px;
-				height: 50px;
-				background: #fff;
+					border: 1px solid #FF8585;
 
-				cursor: pointer;
+					border-radius: 20px;
+					width: 50px;
+					height: 50px;
+					background: #fff;
 
-				svg {
-					width: 25px;
-					height: 25px;
-					// fill: #FF8585;
+					cursor: pointer;
+
+					svg {
+						width: 25px;
+						height: 25px;
+						fill: #FF8585;
+					}
+
+					&:hover {
+						border: 1px solid #cacaca;
+						transition: 0.3s all;
+
+						.sneakers-card-bottom-bookmarks-svg {
+							path {
+								fill: #FF8585;
+								transition: 0.3s all;
+
+							}
+						}
+					}
+				}
+
+				&-false {
+					position: absolute;
+					top: 30px;
+					left: 30px;
+
+					border: 1px solid #cacaca;
+					border-radius: 20px;
+					width: 50px;
+					height: 50px;
+					background: #fff;
+
+					cursor: pointer;
+
+					svg {
+						width: 25px;
+						height: 25px;
+						fill: #e7e5e5;
+					}
+
+					&:hover {
+						border: 1px solid #FF8585;
+						transition: 0.3s all;
+
+						.sneakers-card-bottom-bookmarks-svg {
+							path {
+								fill: #FF8585;
+								transition: 0.3s all;
+
+							}
+						}
+					}
 				}
 			}
 
@@ -135,7 +184,53 @@
 					height: 20px;
 				}
 
-				&__disabled {
+				&:hover {
+					border: 1px solid #8bb43c;
+
+					background: white;
+					transition: 0.3s all;
+
+					path {
+						fill: #D3D3D3;
+						transition: 0.3s all;
+					}
+				}
+
+				&-true {
+					
+					border-radius: 20px;
+					width: 50px;
+					height: 50px;
+					background: #fff;
+
+					cursor: pointer;
+
+					&:hover {
+						border: 1px solid #cacaca;
+						transition: 0.3s all;
+
+						path {
+							fill: #8bb43c;
+							transition: 0.3s all;
+						}
+					}
+
+					border: 1px solid #8bb43c;
+					
+
+						path {
+							fill: #8bb43c;
+							transition: 0.3s all;
+						}
+
+					svg {
+						width: 20px;
+						height: 20px;
+					}
+
+				}
+
+				&-false {
 					border: 1px solid #cacaca;
 					border-radius: 20px;
 					width: 50px;
@@ -144,10 +239,22 @@
 
 					cursor: pointer;
 
+					&:hover {
+						border: 1px solid #8bb43c;
+						transition: 0.3s all;
+
+						path {
+							fill: #8bb43c;
+							transition: 0.3s all;
+						}
+					}
+
 					svg {
 						width: 20px;
 						height: 20px;
 					}
+
+					
 				}
 			}
 		}
