--- a/src/components/empty/empty.scss
+++ b/src/components/empty/empty.scss
@@ -43,10 +43,12 @@
 
 
 	&-btn {
+		border: 1px solid #ffff;
+
 		margin-top: 40px;
 		font-family: var(--font-family);
 		font-weight: 600;
-		font-size: 16px;
+		font-size: 18px;
 		text-align: center;
 		color: #fff;
 
@@ -55,5 +57,13 @@
 		padding: 20px 0;
 
 		background: #9dd458;
+
+		&:hover {
+			background: #fff;
+			color: #9dd458;
+			border: 1px solid #9dd458;
+			transition: 0.3s all;
+
+		}
 	}
 }
