--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import './_normalize';
 @import './_cart';
 @import './_bookmarks';
+@import './_notFound';
 
 :root {
 	--font-family: "Inter", sans-serif;
